syntax = "proto3";

import "google/protobuf/any.proto";

// weave.trait.security.BoltLockTrait
message BoltLock {
  message BoltLockField1 {
    bytes field_1 = 1;
    bytes field_2 = 2;
    message BoltLockField4 {
      bytes field_1 = 1;
      bytes field_2 = 2;
    }

    BoltLockField4 field_4 = 4;
    message BoltLockField7 {
      bytes field_2 = 2;
      message BoltLockField4 {
        int64 field_1 = 1;
        int64 field_2 = 2;
      }

      BoltLockField4 field_4 = 4;
    }

    BoltLockField7 field_7 = 7;
  }

  BoltLockField1 field_1 = 1;
  message BoltLockField3 {
    message BoltLockField1 {
      bytes field_1 = 1;
      bytes field_2 = 2;
    }

    BoltLockField1 field_1 = 1;
    bytes field_2 = 2;
    message BoltLockField3 {
      message BoltLockField1 {
        bytes field_1 = 1;
        message BoltLockField2 {
          bytes field_1 = 1;
          int64 field_2 = 2;
          int64 field_3 = 3;
          int64 field_4 = 4;
          int64 field_5 = 5;
          int64 field_7 = 7;
          int64 field_9 = 9;
          bytes field_10 = 10;
          message BoltLockField12 {
            bytes field_1 = 1;
          }

          BoltLockField12 field_12 = 12;
          message BoltLockField13 {
            bytes field_1 = 1;
            int64 field_2 = 2;
          }

          BoltLockField13 field_13 = 13;
        }

        BoltLockField2 field_2 = 2;
      }

      BoltLockField1 field_1 = 1;
    }

    BoltLockField3 field_3 = 3;
    int64 field_4 = 4;
  }

  BoltLockField3 field_3 = 3;
  message BoltLockField5 {
    int64 field_1 = 1;
    int64 field_2 = 2;
  }

  BoltLockField5 field_5 = 5;
}