syntax = "proto3";

import "google/protobuf/any.proto";

// nest.trait.structure.StructureInfoTrait
message StructureInfo {
}